--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 body{
     display: flex;
     flex-direction: column;
-    align-items: center
-    ;
+    align-items: center;
+    font-family: 'VT323', monospace;
+}
+
+h1 {
+    color: white;
+    text-shadow: 0px 0px 2px black;
 }
