--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,46 @@ body{
     flex-direction: column;
     align-items: center;
     font-family: 'VT323', monospace;
+    background-color: #282e33;
 }
 
 h1 {
+    font-size: 30px;
     color: white;
-    text-shadow: 0px 0px 2px black;
+    text-shadow: 0px 1px 10px black;
+}
+
+h2 span {
+    position: absolute;
+    font-size: 90px;
+    color: white;
+    text-shadow: 0px 1px 10px black;
+    transform: translate(-20px, 100px);
+}
+
+h2 {
+    visibility: visible;
+}
+
+#game-over {
+    /* transform: translate(1px,200px); */
+    height: 200px;
+    width: 300px;
+    /* border: white 1px solid; */
+    /* border-radius: 10px; */
+    /* background-color: red; */
+    align-content: center;
+    position: absolute;
+    font-size: 60px;
+    color: white;
+    text-shadow: 0px 1px 10px black;
+    visibility: hidden;
+}
+
+#game-over h3{
+    transform: translate(20px, 200px);
+}
+
+#game-over h4{
+    transform: translate(40px,150px); 
 }
