--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,13 @@ h2 {
 h3, h4 {
     margin: 10px;
 } 
+
+button {
+    margin-top: 15px;
+    padding: 10px;
+    font-size: 30px;
+    font-family: 'VT323', monospace;
+}
 /* #game-over h3{
     transform: translate(20px, 200px);
 }
