--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'VT323', monospace;
+    font-family: 'Press Start 2P', 'monospace';
     background-color: #282e33;
+    min-width: 500px;
 }
 
 h1 {
-    font-size: 30px;
+    font-size: 20px;
     color: white;
-    text-shadow: 0px 1px 10px black;
+    text-shadow: 0px 2px 5px black;
 }
 
 h2 span {
     position: absolute;
-    font-size: 90px;
+    font-size: 50px;
     color: white;
-    text-shadow: 0px 1px 10px black;
+    text-shadow: 0px 2px 5px black;
     transform: translate(-20px, 100px);
 }
 
@@ -39,22 +40,22 @@ h2 {
     /* background-color: red; */
     align-content: center;
     position: absolute;
-    font-size: 55px;
+    font-size: 30px;
     color: white;
-    text-shadow: 0px 2px 20px black;
+    text-shadow: 0px 2px 5px black;
     visibility: hidden;
 }
 
 h3, h4 {
-    margin: 10px;
+    margin-bottom: 10px;
 } 
 
-button {
+/* button {
     margin-top: 15px;
     padding: 10px;
     font-size: 30px;
     font-family: 'VT323', monospace;
-}
+} */
 /* #game-over h3{
     transform: translate(20px, 200px);
 }
