--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,17 @@ body{
     align-items: center;
     font-family: 'Press Start 2P', 'monospace';
     background-color: #282e33;
-    min-width: 500px;
 }
+
+/* .container {
+    min-width: 900px;
+} */
 
 h1 {
     font-size: 20px;
     color: white;
     text-shadow: 0px 2px 5px black;
+    margin-bottom: 0;
 }
 
 h2 span {
@@ -50,6 +54,21 @@ h3, h4 {
     margin-bottom: 10px;
 } 
 
+h5 {
+    margin: 5px;
+    color: white;
+    font-size: 10px;
+}
+
+#h5-1 {
+    position: absolute;
+    transform: translate(1px, 680px);
+}
+
+#h5-2 {
+    position: absolute;
+    transform: translate(1px, 710px);
+}
 /* button {
     margin-top: 15px;
     padding: 10px;
@@ -63,3 +82,25 @@ h3, h4 {
 #game-over h4{
     transform: translate(40px,150px); 
 } */
+
+/* The switch - the box around the slider */
+
+#music-switch {
+    color: #282e33;
+    width: 200px;
+    padding: 10px;
+    position: absolute;
+    transform: translate(400px, 300px);
+    font-family: 'Press Start 2P', 'monospace';
+    font-size: 10px;
+}
+
+#sfx-switch {
+    color: #282e33;
+    width: 200px;
+    padding: 10px;
+    position: absolute;
+    transform: translate(400px, 390px);
+    font-family: 'Press Start 2P', 'monospace';
+    font-size: 10px;
+}
