--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@ body{
     background-color: #282e33;
 }
 
-/* .container {
-    min-width: 900px;
-} */
-
 h1 {
     font-size: 20px;
     color: white;
@@ -35,13 +31,8 @@ h2 {
     display: flex;
     flex-direction: column;
     text-align: center;
-    transform: translate(1px,220px);
-    /* height: 200px;
-    width: 300px; */
-    /* border: white 1px solid; */
-    /* border-radius: 10px; */
+    transform: translate(1px,220px);    
     padding: 10px 30px;
-    /* background-color: red; */
     align-content: center;
     position: absolute;
     font-size: 30px;
@@ -69,23 +60,8 @@ h5 {
     position: absolute;
     transform: translate(1px, 710px);
 }
-/* button {
-    margin-top: 15px;
-    padding: 10px;
-    font-size: 30px;
-    font-family: 'VT323', monospace;
-} */
-/* #game-over h3{
-    transform: translate(20px, 200px);
-}
 
-#game-over h4{
-    transform: translate(40px,150px); 
-} */
-
-/* The switch - the box around the slider */
-
-#music-switch {
+/* #music-switch {
     color: #282e33;
     width: 200px;
     padding: 10px;
@@ -103,4 +79,4 @@ h5 {
     transform: translate(400px, 390px);
     font-family: 'Press Start 2P', 'monospace';
     font-size: 10px;
-}
+} */
