--- a/css/style.css
+++ b/css/style.css
@@ -61,22 +61,88 @@ h5 {
     transform: translate(1px, 710px);
 }
 
-/* #music-switch {
-    color: #282e33;
-    width: 200px;
-    padding: 10px;
+#info {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     position: absolute;
-    transform: translate(400px, 300px);
-    font-family: 'Press Start 2P', 'monospace';
+    
+    color: white;
+    text-align: center;
+    transform: translate(1px, 750px);
     font-size: 10px;
 }
 
-#sfx-switch {
-    color: #282e33;
-    width: 200px;
-    padding: 10px;
+#info a {
+    color: white;
+}
+
+#foot {
     position: absolute;
-    transform: translate(400px, 390px);
-    font-family: 'Press Start 2P', 'monospace';
-    font-size: 10px;
-} */
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(161, 160, 160);
+    font-size: 12px;
+    letter-spacing: 1px;
+    transform: translate(1px, 840px);
+}
+
+/* SWITCH FROM W3SCHOOLS.COM */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(119, 196, 96);
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
+  
+  input:checked + .slider {
+    background-color: #d14c4c;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
