--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ h5 {
 }
 
 #foot {
+    margin-bottom: 20px;
     position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(161, 160, 160);
